# full-stack-dev

./: .gitignore  bussines-plan.md  dev-core-101-compiled-or-interpreted.md  dev-core-101-input-output-python.py  dev-core-101-programming-languages-timeline.txt  dev-core-101-variables-js.js  dev-core-101-variables-python.py  front-end-101_websites_research.md  readme.md
back-end-101/: frameworks_overview.md
back-end-101/lesson-3/: .env  .gitignore  pyproject.toml
back-end-101/lesson-5/: .gitignore  pyproject.toml
back-end-101/lesson-6/: .gitignore  app.py  pyproject.toml
back-end-101/lesson-8/: .gitignore  readme.md
back-end-101/lesson-9/: .gitignore  pyproject.toml
back-end-101/lesson-9/my_app/: main.py
back-end-101/lesson2/: .gitignore  pyproject.toml
back-end-101/my_backend_project/: .gitignore  app.py  pyproject.toml
defl_illusion_bot/: bot.py  pyproject.toml  quotes.py
dev-core-101/: dev-core-101-basic-syntax.py  dev-core-101-basic-terms.py  dev-core-101-computer-specs.md  dev-core-101-exercises-js.js  dev-core-101-exercises-python.py  dev-core-101-finalproject-plan.md  dev-core-101-finalproject.py  dev-core-101-industries-research.txt  dev-core-101-task-python.py  dev-core-101-vs-code-bindings.md
dev-core-102/final-project/: final_project_text_adventure.py
dev-core-102/lesson-1/: task_1_clean_code_practice.py
dev-core-102/lesson-10/: task_10_file_handling.py
dev-core-102/lesson-3/: data.txt  (+1 more)
dev-core-104/: commands_history.txt  commands_used.txt  commands_used_7.txt  commands_used_8.txt  commands_used_9.txt  project_structure.txt
dev-ops-101/: dev-ops-101-intro.txt  dev-ops-101-networking.txt  dev-ops-101-reboot-ping-practice.txt  dev-ops-101-server-ip.txt  result.txt  system_info.sh
front-end-101/: front-end-101_websites_research.md
front-end-102/: index.html  styles.css
mvp-project/: .gitignore  package-lock.json  package.json  readme.md
mvp-project/backend/: app.py  pyproject.toml
mvp-project/backend/expense_tracker/app/: auth.py  config.py  database.py  dependencies.py  init_data.py  main.py  models.py  schemas.py
mvp-project/backend/expense_tracker/app/routers/: __init__.py  accounts.py  ai_analysis.py  categories.py  clerk.py  statistic.py  transactions.py  users.py
my-portfolio/: package-lock.json  package.json
my-portfolio-v2/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
(+206 files in other folders)
