[tool.poetry]
name = "lesson-6"
version = "0.1.0"
description = ""
authors = ["deflillusion <defl.illusion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
requests = "2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
