[tool.poetry]
name = "lesson2"
version = "0.1.0"
description = ""
authors = ["deflillusion <defl.illusion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
