[tool.poetry]
name = "my-backend-project"
version = "0.1.0"
description = "my_backend"
authors = ["deflillusion <defl.illusion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
